--- a/index.html
+++ b/index.html
@@ -1,64 +1,87 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Описание проекта">
-    <title>ProjectName</title>
-    <link rel="stylesheet" href="css/style.min.css">
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <div class="container"></div>
-      </header>
-      <main>
-        <section class="intro">
-          <div class="container">
-            <h1>Тестовая страница.</h1>
-            <p>На данной странице показан пример модальных окон.</p>
-            <p>Перед началом разработки не забудьте удалить всё содержимое &#8249;main&#8250;&#8249;&#8260;main&#8250;.</p>
-            <p><a class="btn" href="#" data-open-modal="feedback">modal--feedback link</a></p>
-            <p><a class="btn" href="#" data-open-modal="success">modal--success link</a></p>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Сайт спорт зала SuperGym">
+  <link rel="preload" href="./fonts/roboto-condensed-bold.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="./fonts/roboto-condensed-regular.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="./fonts/roboto-condensed-light.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="./fonts/alumni-sans-bold.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="./fonts/alumni-sans-semibold.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="./fonts/alumni-sans-extrabold.woff2" as="font" crossorigin="anonymous">
+  <title>superFitness</title>
+  <link rel="stylesheet" href="css/style.min.css">
+</head>
+
+<body>
+  <div class="wrapper">
+    <header class="header">
+      <div class="container">
+        <nav class="header__navigation">
+          <a class="header__logo" href="index.html" aria-label="Переход на главную страницу">
+            <svg aria-hidden="true" focusable="false" width="122" height="44">
+              <use href="./img/sprite.svg#icon-logo"></use>
+            </svg>
+          </a>
+          <div class="header__tel">
+          <a class="header__tel-link" href="tel:88005555555" aria-label="Записаться к нам по номеру">
+            8-800-555-55-55
+          </a>
           </div>
-        </section>
-      </main>
-      <footer>
-        <div class="container"></div>
-      </footer>
-    </div>
-
-    <!-- Модалки -->
-    <div class="modal modal--preload" data-modal="feedback">
-      <div class="modal__wrapper">
-        <div class="modal__overlay" data-close-modal></div>
-        <div class="modal__content">
-          <p class="modal__description">Обычная модалка</p>
-          <button class="modal__close-btn btn-reset" type="button" aria-label="Закрыть попап" data-close-modal>
-            <svg width="15" height="15">
-              <use xlink:href="img/sprite.svg#icon-close"></use>
-            </svg>
-          </button>
+        </nav>
+        <div class="header__promo">
+          <ul class="header__list">
+            <li class="header__item">
+              Тренажёрный зал
+            </li>
+            <li class="header__item">
+              Групповые занятия
+            </li>
+            <li class="header__item">
+              Кардио-зона
+            </li>
+          </ul>
+          <div class="header__description">
+            <p>
+              омск
+            </p>
+            <h1>
+              Фитнес <br> центр
+            </h1>
+            <a class="header__link" href="#catalog">
+              Купить&nbsp;абонемент
+            </a>
+          </div>
+          <div class="header__picture">
+            <picture>
+              <source type="image/webp" media="(max-width: 1199px)"
+                srcset="./img/promo-tablet@1x.webp 1x, ./img/promo-tablet@2x.webp 2x">
+              <source type="image/webp"
+                srcset="./img/promo-desktop@1x.webp 1x, ./img/promo-desktop@2x.webp 2x">
+              <source media="(max-width: 1199px)"
+                srcset="./img/promo-tablet@1x.jpg 1x, ./img/promo-tablet@2x.jpg 2x">
+              <img src="./img/promo-desktop@1x.jpg" srcset="./img/promo-desktop@2x.jpg 2x" width="500"
+                height="556" alt="Супермэн одобряет наш спорт зал.">
+            </picture>
+          </div>
         </div>
       </div>
-    </div>
-
-    <div class="modal modal--preload modal--fit-content modal--no-scale" data-modal="success">
-      <div class="modal__wrapper">
-        <div class="modal__overlay" data-close-modal></div>
-        <div class="modal__content">
-          <p class="modal__description">Размер этой модалки зависит от ширины контента,<br> отключена анимация-скейл</p>
-          <button class="modal__close-btn btn-reset" type="button" aria-label="Закрыть попап" data-close-modal>
-            <svg width="15" height="15">
-              <use xlink:href="img/sprite.svg#icon-close"></use>
-            </svg>
-          </button>
+    </header>
+    <main>
+      <section class="intro">
+        <div class="container">
         </div>
-      </div>
-    </div>
+      </section>
+    </main>
+    <footer>
+      <div class="container"></div>
+    </footer>
+  </div>
+  <script src="js/vendor.min.js"></script>
+  <script src="js/main.min.js"></script>
+</body>
 
-    <script src="js/vendor.min.js"></script>
-    <script src="js/main.min.js"></script>
-  </body>
 </html>
